--- a/loginpage.html
+++ b/loginpage.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang=""en">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv=""X-UA-Compatible" content="IE=edge">
-    <meta name=""viewport" content="width=device-width,initial scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Form in HTML and CSS</title>
     <link rel="stylesheet" href="loginpage.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.com.min.css' rel='stylesheet'>
@@ -13,7 +13,7 @@
 <body>
 
     <div class="wrapper">
-        <form action="">
+        <form action="homepage.html">
             <h1>Login</h1>
             <div class="input-box">
                 <input type="text" placeholder="Username" required>
@@ -21,7 +21,7 @@
             </div>
             <div class="input-box">
                 <input type="password" placeholder="Password" required>
-                <i class=' bx bxs-lock-alt'></i>
+                <i class='bx bxs-lock-alt'></i>
             </div>
             <div class="remember-forgot">
                 <label><input type="checkbox">Remember me</label>
@@ -31,8 +31,10 @@
             <button type="submit" class="btn">Login</button>
 
             <div class="register-link">
-                <p>Don't have an account? <a href="#">Register</a></p>
+                <p>Don't have an account? <a href="signup.html">Register</a></p>
             </div>
         </form>
     </div>
-</body></html>
+</body>
+
+</html>
