--- a/homepage.html
+++ b/homepage.html
@@ -64,14 +64,14 @@
             Let's Learn Together
         </p>
     </footer>
-    <div class="circle1">Text 1</div>
-    <div class="circle2">Text 2</div>
-    <div class="circle3">Text 3</div>
+    <div class="circle1">Explore Your Passion</div>
+    <div class="circle2">Beginner to Expert</div>
+    <div class="circle3">Empower Yourself</div>
     <div class="container">
         <!-- The 'src' attribute specifies the path to the image file -->
         <img src="images2.jpeg" class="img1">
         <!-- Circular text boxes -->
-        <div class="circle4">Text 4</div>
+        <div class="circle4">Unlock Your Potential</div>
     </div>
 </body>
 
