--- a/loginpage.html
+++ b/loginpage.html
@@ -13,7 +13,7 @@
 <body>
 
     <div class="wrapper">
-        <form action="homepage.html">
+        <form action="index.html">
             <h1>Login</h1>
             <div class="input-box">
                 <input type="text" placeholder="Username" required>
