--- a/signup.html
+++ b/signup.html
@@ -10,7 +10,7 @@
     <div class="container">
       <div class="center">
           <h1>Register</h1>
-          <form method="POST" action="index.html?">
+          <form action="index.html">
               <div class="txt_field">
                   <input type="text" name="name" required>
                   <span></span>
